data/usersCode/dfsdfsdf/question1/error.txt
/home/gauravghati/clash/data/usersCode/dfsdfsdf/question1/code1-0.cpp:1:1: error: ‘sdfsdvxcvsdfhvbghj’ does not name a type
 sdfsdvxcvsdfhvbghj
 ^~~~~~~~~~~~~~~~~~
